work-in-progress: added 2nd test (less meta…), struggling with initialisation a bit...

--- a/nl.dslmeinte.jsmf/test/test.html
+++ b/nl.dslmeinte.jsmf/test/test.html
@@ -15,5 +15,6 @@
 	<div id="qunit"></div>
 	<script src="qunit-1.9.0.js"></script>
 	<script src="test1.js"></script>
+	<script src="test2.js"></script>
 </body>
 </html>
