--- a/nl.dslmeinte.jsmf/test/test.html
+++ b/nl.dslmeinte.jsmf/test/test.html
@@ -9,6 +9,7 @@
 	<script src="../pre-build/jsmf-preamble.js" type="text/javascript"></script>
 	<script src="../pre-build/jsmf-emf.js" type="text/javascript"></script>
 	<script src="../pre-build/jsmf-ecore.js" type="text/javascript"></script>
+	<script src="../pre-build/jsmf-resolver.js" type="text/javascript"></script>
 	<script src="../pre-build/jsmf-util.js" type="text/javascript"></script>
 </head>
 <body>
