--- a/nl.dslmeinte.jsmf/test/test.html
+++ b/nl.dslmeinte.jsmf/test/test.html
@@ -17,5 +17,6 @@
 	<script src="qunit-1.9.0.js"></script>
 	<script src="test1.js"></script>
 	<script src="test2.js"></script>
+	<div id="json"></div>
 </body>
 </html>
