--- a/nl.dslmeinte.jsmf/test/test.html
+++ b/nl.dslmeinte.jsmf/test/test.html
@@ -18,6 +18,7 @@
 	<script src="test1.js"></script>
 	<script src="test2.js"></script>
 	<script src="test3.js"></script>
+	<script src="test4.js"></script>
 	<div id="json"></div>
 </body>
 </html>
