--- a/nl.dslmeinte.jsmf/test/test.html
+++ b/nl.dslmeinte.jsmf/test/test.html
@@ -7,8 +7,8 @@
 	<script src="../redist/jquery-1.8.1.js" type="text/javascript"></script>
 	<!-- use pre-built files for ease/speed of dev: -->
 	<script src="../pre-build/jsmf-preamble.js" type="text/javascript"></script>
-	<script src="../pre-build/jsmf-emf.js" type="text/javascript"></script>
-	<script src="../pre-build/jsmf-ecore.js" type="text/javascript"></script>
+	<script src="../pre-build/jsmf-meta.js" type="text/javascript"></script>
+	<script src="../pre-build/jsmf-model.js" type="text/javascript"></script>
 	<script src="../pre-build/jsmf-resolver.js" type="text/javascript"></script>
 	<script src="../pre-build/jsmf-util.js" type="text/javascript"></script>
 </head>
