--- a/nl.dslmeinte.jsmf/test/test-all.html
+++ b/nl.dslmeinte.jsmf/test/test-all.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" href="qunit-1.9.0.css">
 	<script src="../redist/jquery-1.8.2.js" type="text/javascript"></script>
 	<!-- use pre-built files for ease/speed of dev: -->
-	<script src="../pre-build/jsmf-preamble.js" type="text/javascript"></script>
-	<script src="../pre-build/jsmf-meta.js" type="text/javascript"></script>
-	<script src="../pre-build/jsmf-model.js" type="text/javascript"></script>
-	<script src="../pre-build/jsmf-resolver.js" type="text/javascript"></script>
-	<script src="../pre-build/jsmf-util.js" type="text/javascript"></script>
+	<script src="../src/jsmf-preamble.js" type="text/javascript"></script>
+	<script src="../src/jsmf-meta.js" type="text/javascript"></script>
+	<script src="../src/jsmf-model.js" type="text/javascript"></script>
+	<script src="../src/jsmf-resolver.js" type="text/javascript"></script>
+	<script src="../src/jsmf-util.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="qunit"></div>
