some more restructuring and renaming

--- a/nl.dslmeinte.jsmf/test/test-all.html
+++ b/nl.dslmeinte.jsmf/test/test-all.html
@@ -9,7 +9,7 @@
 	<script src="../src/jsmf-preamble.js" type="text/javascript"></script>
 	<script src="../src/jsmf-meta.js" type="text/javascript"></script>
 	<script src="../src/jsmf-model.js" type="text/javascript"></script>
-	<script src="../src/jsmf-resolver.js" type="text/javascript"></script>
+	<script src="../src/jsmf-resource.js" type="text/javascript"></script>
 	<script src="../src/jsmf-util.js" type="text/javascript"></script>
 </head>
 <body>
