--- a/nl.dslmeinte.jsmf/test/test-all.html
+++ b/nl.dslmeinte.jsmf/test/test-all.html
@@ -7,6 +7,7 @@
 	<script src="../redist/jquery-1.8.2.js" type="text/javascript"></script>
 	<!-- use pre-built files for ease/speed of dev: -->
 	<script src="../src/jsmf-preamble.js" type="text/javascript"></script>
+	<script src="../src/oo-util.js" type="text/javascript"></script>
 	<script src="../src/jsmf-util.js" type="text/javascript"></script>
 	<script src="../src/jsmf-meta.js" type="text/javascript"></script>
 	<script src="../src/jsmf-model.js" type="text/javascript"></script>
