Replaced explicit throw new Error-ing with invocation of callback for model-level problems. (Format-level problems still throw an Error.)

--- a/nl.dslmeinte.jsmf/test/test-all.html
+++ b/nl.dslmeinte.jsmf/test/test-all.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="qunit-1.9.0.css">
 	<script src="../redist/jquery-1.8.2.js" type="text/javascript"></script>
 	<!-- use pre-built files for ease/speed of dev: -->
-	<script src="../src/jsmf-preamble.js" type="text/javascript"></script>
 	<script src="../src/oo-util.js" type="text/javascript"></script>
+	<script src="../src/jsmf-preamble.js" type="text/javascript"></script>
 	<script src="../src/jsmf-util.js" type="text/javascript"></script>
 	<script src="../src/jsmf-meta.js" type="text/javascript"></script>
 	<script src="../src/jsmf-model.js" type="text/javascript"></script>
@@ -16,6 +16,7 @@
 <body>
 	<div id="qunit"></div>
 	<script src="qunit-1.9.0.js"></script>
+	<script src="test-util.js"></script>
 	<script src="test1.js"></script>
 	<script src="test2.js"></script>
 	<script src="test3.js"></script>
