--- a/nl.dslmeinte.jsmf/test/test-deserialization.html
+++ b/nl.dslmeinte.jsmf/test/test-deserialization.html
@@ -17,10 +17,10 @@
 	<div id="qunit"></div>
 	<script src="qunit-1.9.0.js"></script>
 	<script src="test-util.js"></script>
-	<script src="test1.js"></script>
-	<script src="test2.js"></script>
-	<script src="test3.js"></script>
-	<script src="test4.js"></script>
+	<script src="test1/test1.js"></script>
+	<script src="test2/test2.js"></script>
+	<script src="test3/test3.js"></script>
+	<script src="test4/test4.js"></script>
 	<div id="json"></div>
 </body>
 </html>
