replaced use of jQuery for collection functionality with Underscore.js

--- a/nl.dslmeinte.jsmf/test/test-deserialization.html
+++ b/nl.dslmeinte.jsmf/test/test-deserialization.html
@@ -5,6 +5,7 @@
 	<title>Unit tests for JSMF</title>
 	<link rel="stylesheet" href="qunit-1.9.0.css">
 	<script src="../redist/jquery-1.8.2.js" type="text/javascript"></script>
+	<script src="../redist/underscore-1.6.0.js" type="text/javascript"></script>
 	<!-- use pre-built files for ease/speed of dev: -->
 	<script src="../src/oo-util.js" type="text/javascript"></script>
 	<script src="../src/jsmf-preamble.js" type="text/javascript"></script>
